# wadoym

./: .gitignore  README.md  prova.txt  prova2.txt
backend/: README.rst  docker-compose.yml  pyproject.toml
backend/docker/: FalconDockerfile  falcon-docker-entrypoint.sh
backend/wadoym/: app.py
backend/wadoym/api/: sample.py
backend/wadoym/game/: cards.py  loaders.py  player.py  round.py  session.py
backend/wadoym/settings/: docker.py  local.py  production.py
frontend/: .eslintcache  package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/layout/: Button.css  Button.js  Footer.css  Footer.js  Header.css  Header.js  PlayerForm.css  PlayerForm.js
frontend/src/components/pages/: LandingPage.css  LandingPage.js
