[tool.poetry]
name = "wadoym"
version = "0.1.0"
description = "What do you meme?"
authors = ["WalterDa <walterdangalante@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
falcon = "^2.0.0"
gunicorn = "^20.0.4"
gevent = "^20.9.0"
pymongo = "^3.11.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
tox = "^3.20.1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
